# restaurant_mgmt

./: pyproject.toml  requirements.txt
app/: __init__.py  config.py  extensions.py
app/models/: branch.py  category.py  invoice.py  item.py  menu.py  order.py  reservation.py  restaurant.py  staff.py  table.py  user.py
app/routes/: auth_routes.py  branch_routes.py  category_item_routes.py  invoice_routes.py  menu_routes.py  order_routes.py  report_routes.py  reservation_routes.py  restaurant_routes.py  table_routes.py
app/schemas/: branch_schema.py  category_schema.py  invoice_schema.py  item_schema.py  menu_schema.py  order_schema.py  payment_schema.py  reservation_schema.py  restaurant_schema.py  staff_schema.py  table_schema.py
app/utils/: decorators.py
instance/: restaurant.db
